--- a/src/components/floating/navbar/NavBar.css
+++ b/src/components/floating/navbar/NavBar.css
@@ -5,24 +5,17 @@
 }
 .nav-bar-app-bar {
     padding: 0%;
+    background-image: linear-gradient(180deg, #4e372e,#6b4939 );
     border-radius: 10px;
 }
 
 .nav-bar-tool-bar {
     width: 800px;
     padding: 1% 1% 1%;
-    background-image: linear-gradient(#664d3c, #977d6c);
+    background-image: linear-gradient(180deg, #4e372e,#6b4939 );
     border-radius: 10px;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
-
-.nav-bar-logo-text {
-    width: 100%;
-    font-size: 24px;
-    display: flex;
-    justify-content: space-evenly;
     align-items: center;
 }
 
@@ -32,6 +25,9 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    color: #0d1a0d;
+    font-weight: bolder;
+    opacity: 0.7;
 }
 
 .nav-bar-stack-btn {
