--- a/src/components/floating/navbar/navbar2/NavBar2.css
+++ b/src/components/floating/navbar/navbar2/NavBar2.css
@@ -1,8 +1,14 @@
 :root {
-    --nav-link-color: #618012;
+    --nav-link-color: #4d660f;
     --white: #ffffff;
-    --nav-font: 'Courier New', Courier, monospace;
+    --nav-font: 'Libre Baskerville', serif;
+    --nav-shadow : 2px 2px 3px rgba(77, 73, 73, 0.1) ;
+    --nav-opacity : 0.8;
+    --nav-logo-opacity: 0.9;
+    --nav-font-size: 20px;
+
 }
+
 
 
 .nav-bar-floating-wrapper {
@@ -11,13 +17,14 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    
 }
 
 .nav-bar-floating-container {
     width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
 }
 
@@ -25,6 +32,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
+    padding: 10px 2px 1px 2px;
 
 }
 
@@ -35,6 +43,7 @@
 .nav-bar-floating-logo {
     width: 250px;
     height: 125px;
+    opacity: var(--nav-logo-opacity);
 }
 
 .nav-bar-floating-content-container {
@@ -43,6 +52,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-bottom: 0;
+
 }
 .nav-bar-floating-content {
     width: 100%;
@@ -50,6 +61,8 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    margin-bottom: 0;
+
 }
 
 .nav-bar-floating-content-list {
@@ -58,21 +71,41 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-inline-start: 0;
+
+    margin-bottom: 12px;
+
 
 }
 
 .nav-bar-floating-content-list-item {
     text-decoration: none;
     list-style: none;
-    padding: 1px 40px 1px 2px;
+    padding: 1px 20px 1px 2px;
     width: 100%;
+    margin-bottom: 1;
 }
+
+.nav-bar-floating-content-list-item:hover,
+.nav-bar-floating-content-list-item:focus {
+    box-shadow: 0.2em 0.5em 0.5em -0.4em #303f09;
+    transform: translateY(-0.25em);
+    transition: 10ms;
+} 
+
+
 
 .nav-bar-floating-content-list-item-title {
     text-transform: uppercase;
     font-family: var(--nav-font);
     color: var(--nav-link-color);
+    text-shadow: var(--nav-shadow);
+    opacity: var(--nav-opacity);
+    margin-bottom: 0;
+    font-size: var(--nav-font-size);
+}
+
+.nav-bar-floating-content-list-item-link:hover {
+    color: #c4d890;
 }
 
 .nav-bar-floating-content-list-item-link {
@@ -83,7 +116,7 @@
 .nav-bar-floating-content-list-item-link:visited {
     text-transform: uppercase;
     text-decoration: none;
-    color: var(--nav-link-color);  
+
 }
 
 .nav-bar-floating-content-list-toggle{
@@ -121,6 +154,7 @@
         align-items: center;
         justify-content: center;   
         position: absolute;
+        left:0;
         top: 70px;
         width: 100%;
         height: 100%;
@@ -147,18 +181,21 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        top: 80px;
         
     }
 
     .nav-bar-floating-content-list.open {
         transform: translateX(0);
+        background-color: #bfc3bf;
     }
     
     .nav-bar-floating-content-list-item {
         text-decoration: none;
         list-style: none;
-        padding: 1px 40px 1px 2px;
+        padding: 1px 10px 1px 2px;
         width: 100%;
+        
     }
 
     .nav-bar-floating-content-list-item::before {
