--- a/src/components/newscards/NewsCard.scss
+++ b/src/components/newscards/NewsCard.scss
@@ -1,5 +1,5 @@
 
-$news-card-color: #e3f0c4;
+$news-card-color: #f8fcf3;
 
 $news-card-h3-font-family: "El Messiri", Sans-serif;
 $news-card-h3-font-size: 18px; 
@@ -9,15 +9,26 @@ $news-card-h3-font-color: #4d660f;
 $news-card-p-font-family: "Arial", "Helvetica", "sans-serif";
 $news-card-p-font-size: 14px; 
 $news-card-p-font-weight: 200; 
-$news-card-p-font-color: #525843; 
+$news-card-p-font-color: #7d8173; 
 
 
 .news-card-container {
-    width: 100%;
     min-width: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: $news-card-color;
+    border-radius: 10px;
+    transition: transform 0.3s ease;
+
+    &:hover {
+        opacity: 0.8;
+        transform: translateY(-10px);
+    }
+
+    a {
+        text-decoration: none;
+    }
 }
 
 .news-card-content {
@@ -35,11 +46,12 @@ $news-card-p-font-color: #525843;
     flex-direction: column;
 
     img {
-        height: 100px;
-        width: 100px;
+        height: 250px;
+        width: 250px;
     }
 
     h3 {
+        margin: 0;
         font-family: $news-card-h3-font-family;
         font-size: $news-card-h3-font-size;
         font-weight: $news-card-h3-font-weight;
@@ -47,6 +59,10 @@ $news-card-p-font-color: #525843;
     }
 
     p {
+        margin: 5px;
+        padding: 10px 15px 10px 15px;
+        text-align: center;
+        line-height: 25px;
         font-family: $news-card-p-font-family;
         font-size: $news-card-p-font-size;
         font-weight: $news-card-p-font-weight;
