footer all pages

--- a/src/components/floating/footer/Footer.scss
+++ b/src/components/floating/footer/Footer.scss
@@ -3,7 +3,7 @@ $footer-title-h1-font-color: #48610a;
 $footer-title-h3-font-color: #4d660f;
 
 
-$footer-form-color: #c3c4c0;
+$footer-form-color: #dbdbd9;
 $footer-form-font: "El Messiri", Sans-serif;
 $footer-form-font-size: 20px;
 
@@ -20,9 +20,9 @@ $footer-bottom-title-font-weight: 800;
 $footer-bottom-title-font-color: #4d660f;
 
 $footer-bottom-link-font-family: #4d660f;
-$footer-bottom-link-font-size: #4d660f;
-$footer-bottom-link-font-weight: #4d660f;
-$footer-bottom-link-font-color: #4d660f;
+$footer-bottom-link-font-size: 20px;
+$footer-bottom-link-font-weight: 600;
+$footer-bottom-link-font-color: #505740;
 
 
 
@@ -50,7 +50,6 @@ $footer-bottom-link-font-color: #4d660f;
 }
 
 
-
 .footer-top-container-title {
     display: flex;
     flex-direction: column;
@@ -59,6 +58,7 @@ $footer-bottom-link-font-color: #4d660f;
 
     h1 {
         color: $footer-title-h1-font-color;
+        padding-bottom: 20px;
 
     }
 
@@ -73,6 +73,8 @@ $footer-bottom-link-font-color: #4d660f;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    padding: 10px 0px 0px 0px;
+
 
     form {
         padding: 1px 4px 1px 1px;
@@ -105,7 +107,7 @@ $footer-bottom-link-font-color: #4d660f;
 }
 
 .footer-bottom-container {
-    padding: 100px 0px 100px 0px;
+    padding: 80px 0px 100px 0px;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -114,10 +116,11 @@ $footer-bottom-link-font-color: #4d660f;
 }
 
 .footer-bottom-contact-container {
+    min-height: 320px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 
 }
@@ -134,6 +137,10 @@ $footer-bottom-link-font-color: #4d660f;
 }
 
 .footer-bottom-contact-content {
+    font-family: $footer-bottom-link-font-family;
+    font-size: $footer-bottom-link-font-size;
+    font-weight: $footer-bottom-link-font-weight;
+    color: $footer-bottom-link-font-color;
 
     ul {
         padding-inline-start: 0;
@@ -147,10 +154,11 @@ $footer-bottom-link-font-color: #4d660f;
 }
 
 .footer-bottom-menu-container {
+    min-height: 320px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -166,6 +174,17 @@ $footer-bottom-link-font-color: #4d660f;
 }
 
 .footer-bottom-menu-content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-right: 30px;
+
+    font-family: $footer-bottom-link-font-family;
+    font-size: $footer-bottom-link-font-size;
+    font-weight: $footer-bottom-link-font-weight;
+    color: $footer-bottom-link-font-color;
 
     ul {
         line-height: 30px;
@@ -174,6 +193,12 @@ $footer-bottom-link-font-color: #4d660f;
         li {
             text-decoration: none;
             list-style: none;
+            transition: transform 0.3s ease;
+
+            &:hover {
+                opacity: 0.7;
+                transform: translateY(-4px) scale(1.15);
+            }
 
             a {
                 text-decoration: none;
@@ -185,17 +210,17 @@ $footer-bottom-link-font-color: #4d660f;
                     font-weight: $footer-bottom-link-font-weight;
                     color: $footer-bottom-link-font-color;
                 }
-
             }
         }
     }
 }
 
 .footer-bottom-social-container {
+    min-height: 320px;
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
@@ -219,16 +244,32 @@ $footer-bottom-link-font-color: #4d660f;
         li {
             text-decoration: none;
             list-style: none;
+            transition: transform 0.3s ease;
 
-            a {
+            &:hover {
+                opacity: 0.7;
+                transform: translateY(-4px) scale(1.15);
+            }
+
+            a {            
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                text-align: top;
+                height: 100%;
+                padding: 10px 2px 1px 2px;
                 text-decoration: none;
                 color: $footer-bottom-link-font-color;
+                font-family: $footer-bottom-link-font-family;
+                font-size: $footer-bottom-link-font-size;
+                font-weight: $footer-bottom-link-font-weight;
 
                 &:visited {
-                    font-family: $footer-bottom-link-font-family;
-                    font-size: $footer-bottom-link-font-size;
-                    font-weight: $footer-bottom-link-font-weight;
                     color: $footer-bottom-link-font-color;
+                }
+
+                img {
+                    padding: 1px 5px 1px 2px;
                 }
 
             }
