--- a/src/components/donatepage/DonateCallToAction.scss
+++ b/src/components/donatepage/DonateCallToAction.scss
@@ -25,11 +25,51 @@ $donate-action-btn-title-font-family:"El Messiri", Sans-serif;
 $donate-action-btn-title-font-size: 18px;
 $donate-action-btn-title-font-color: #4d660f;
 $donate-action-btn-title-font-weight: 600;
-$donate-action-btn-color: #c6d1a9;
+$donate-action-btn-color: #e5ebd4;
+
+$donate-action-side-car-title-font-family:"El Messiri", Sans-serif;
+$donate-action-side-car-title-font-size: 26px;
+$donate-action-side-car-title-font-color: #333d18;
+$donate-action-side-car-title-font-weight: 600;
+$donate-action-side-car-color: #c6d1a9;
+
+$donate-action-side-car-menu-once-bg-color: #d4dfb8;
+$donate-action-side-car-menu-weekly-bg-color: #d3ddb6;
+$donate-action-side-car-menu-monthly-bg-color: #d6e0b8;
+
+$donate-action-side-car-email-button-color:#3c4624;
+$donate-action-side-car-email-button-font-family:"El Messiri", Sans-serif;
+$donate-action-side-car-email-button-font-color:#ffffff;
+$donate-action-side-car-email-button-font-size: 12px;
+$donate-action-side-car-email-button-font-weight:600;
+
+$donate-action-side-car-input-bg-color:#f7fceb;
+$donate-action-side-car-input-font-size:12px;
+
+$donate-action-side-car-amount-button-color:#778650;
+$donate-action-side-car-amount-button-highlighted-color:#9cb168;
+
+$donate-action-side-car-amount-button-font-family:"El Messiri", Sans-serif;
+$donate-action-side-car-amount-button-font-color:#56700d;
+$donate-action-side-car-amount-button-font-size: 22px;
+$donate-action-side-car-amount-button-font-weight: 900;
+
+$donate-action-side-car-time-button-highlighted-color:#bcc7a4;
+$donate-action-side-car-time-button-highlighted-colorW: #96a772;
+$donate-action-side-car-time-button-highlighted-colorM:#91bb53;
+
+$donate-action-side-car-donate-button-color:#3c4624;
+$donate-action-side-car-donate-button-font-family:"El Messiri", Sans-serif;
+$donate-action-side-car-donate-button-font-color:#ffffff;
+$donate-action-side-car-donate-button-font-size: 26px;
+$donate-action-side-car-donate-button-font-weight: bolder;
+
+$donate-action-side-car-menu-padding: 20px 0px 10px 0px;
 
 
 .donate-action-wrapper {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -37,6 +77,7 @@ $donate-action-btn-color: #c6d1a9;
 }
 
 .donate-action-container {
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -45,6 +86,7 @@ $donate-action-btn-color: #c6d1a9;
 }
 
 .donate-action-container-left {
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -81,6 +123,7 @@ $donate-action-btn-color: #c6d1a9;
 }
 
 .donate-action-container-right {
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -89,6 +132,7 @@ $donate-action-btn-color: #c6d1a9;
 }
 
 .donate-action-container-right-side-car {
+    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -104,35 +148,37 @@ $donate-action-btn-color: #c6d1a9;
     justify-content: center;
     align-items: center;
     background-color: $donate-action-side-car-color;
+    border-radius: 10px;
 }
 
 .donate-action-container-right-side-car-title {
-
 
     h3 {
         font-family: $donate-action-sub-sub-title-font-family;
         font-size: $donate-action-sub-sub-title-font-size;
         color: $donate-action-sub-sub-title-font-color;
         font-weight: $donate-action-sub-sub-title-font-weight;        
-    }
+    }   
 }
 
 .donate-action-container-right-side-car-buton-list {
     width: 100%;
-
+    
     ul {
+        margin-bottom: 0;
         padding-inline-start: 0;
-        padding: 10px 20px 10px 20px;
+        padding: 10px 20px 0px 20px;
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
+        align-items: flex-end;
 
         li {
             padding-inline-start: 0;
             list-style: none;
             background-color: $donate-action-btn-color;
-            border-radius: 10px;
+            border-top-left-radius:10px ;
+            border-top-right-radius:10px ;
 
             &:hover {
                 opacity: 0.7;
@@ -151,7 +197,23 @@ $donate-action-btn-color: #c6d1a9;
                 font-family: $donate-action-btn-title-font-family;
                 font-size: $donate-action-btn-title-font-size;
                 color: $donate-action-btn-title-font-color;
-                font-weight: $donate-action-btn-title-font-weight;        
+                font-weight: $donate-action-btn-title-font-weight;
+                
+                &.highlighted {
+                    border-top-right-radius:10px ;
+                    border-top-left-radius:10px ;
+                    background-color: $donate-action-side-car-time-button-highlighted-color;
+                }
+                &.highlightedW {
+                    border-top-right-radius:10px ;
+                    border-top-left-radius:10px ;
+                    background-color: $donate-action-side-car-time-button-highlighted-colorW;
+                }
+                &.highlightedM {
+                    border-top-left-radius:10px ;
+                    border-top-right-radius:10px ;
+                    background-color: $donate-action-side-car-time-button-highlighted-colorM;
+                }       
             }
         }
     }
@@ -164,46 +226,171 @@ $donate-action-btn-color: #c6d1a9;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    border-radius: 10px;
 }
 
-
+.donate-action-container-right-side-car-menu-item-enter {
+    opacity: 0;
+}
+.donate-action-container-right-side-car-menu-item-enter-active {
+    opacity: 1;
+    transition: opacity 1000ms ease-in;
+}
+.donate-action-container-right-side-car-menu-item-exit {
+    opacity: 1;
+}
+.donate-action-container-right-side-car-menu-item-exit-active {
+    opacity: 0;
+    transition: opacity 1000ms ease-out;
+}
 
 .donate-action-container-right-side-car-menu-once {
+    padding: $donate-action-side-car-menu-padding;
+    background-color: $donate-action-side-car-time-button-highlighted-color;
+    border-bottom: 10px;
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+.donate-action-container-right-side-car-menu-weekly {
+    background-color: $donate-action-side-car-time-button-highlighted-colorW;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 
-    &.active {
-        opacity: 1;
-    }
+.donate-action-container-right-side-car-menu-monthly {
+    background-color: $donate-action-side-car-time-button-highlighted-colorM;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .donate-action-container-right-side-car-menu-title {
 
-    h3 {
+    h2 {
+        font-family: $donate-action-side-car-title-font-family;
+        font-size: $donate-action-side-car-title-font-size;
+        font-weight: $donate-action-side-car-title-font-weight;
+        color: $donate-action-side-car-title-font-color;
+    }
 
+    h3 {
+        font-family: $donate-action-side-car-title-font-family;
+        font-size: 16px;
+        font-weight: $donate-action-side-car-title-font-weight;
+        color: $donate-action-side-car-title-font-color;
     }
 }
 
-.donate-action-container-right-side-car-menu-weekly {
+.donate-action-container-right-side-car-menu-input {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
+    form {
+        padding: 10px 10px 10px 10px;
+        input {
+            background-color: $donate-action-side-car-input-bg-color;
+            border-radius: 10px;
+            padding: 10px 10px 10px 10px;
+            border: none;
+            font-size: $donate-action-side-car-input-font-size;
+        }
+    }
 
-    &.active {
-        opacity: 1;
+    button { 
+        &:hover {
+            opacity: 0.7;
+            box-shadow: 2px 2px 2px #888888;
+        }
+        
+        padding: 8px 20px 8px 20px;
+        border: none;
+        border-radius: 10px;
+        background-color: $donate-action-side-car-email-button-color;
+        font-family: $donate-action-side-car-email-button-font-family;
+        font-size: $donate-action-side-car-email-button-font-size;
+        font-weight: $donate-action-side-car-email-button-font-weight;
+        color: $donate-action-side-car-email-button-font-color;
     }
 }
+
+.donate-action-container-right-side-car-amount-list {
+    width: 100%;
+
+    ul {
+        padding-inline-start: 0;
+        padding: 10px 40px 10px 40px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+
+        li {
+            padding-inline-start: 0;
+            list-style: none;
+            background-color: $donate-action-btn-color;
+            border-radius: 10px;
+
+            &:hover {
+                opacity: 0.7;
+                box-shadow: 2px 2px 2px #888888;
+            }
+
+            button {
+                padding: 15px 50px 15px 50px;
+                width: 100%;
+                height: 100%;
+                text-decoration: none;
+                background-color: transparent;
+                border: none;
+                font-family: $donate-action-side-car-amount-button-font-family;              
+                color: $donate-action-side-car-amount-button-font-color;
+                font-size: $donate-action-side-car-amount-button-font-size;
+                font-weight:$donate-action-side-car-amount-button-font-weight;
+
+                &.highlighted {
+                    border-radius: 10px;
+                    background-color: $donate-action-side-car-amount-button-highlighted-color;
+                }        
+            }
+        }
+
+    }
+}
+
+.donate-action-container-right-side-car-donate-now {
+    padding: 15px 0px 35px 0px;
+
+    button {
+        &:hover {
+            opacity: 0.7;
+            box-shadow: 2px 2px 2px #888888;
+        }
+        padding: 15px 50px 15px 50px;
+        width: 100%;
+        height: 100%;
+        border-radius: 10px;
+        border: none;
+        background-color: $donate-action-side-car-donate-button-color;
+        font-family: $donate-action-side-car-donate-button-font-family;              
+        color: $donate-action-side-car-donate-button-font-color;
+        font-size: $donate-action-side-car-donate-button-font-size;
+        font-weight:$donate-action-side-car-donate-button-font-weight;
+    }
+}
+
